--- a/src/single.html
+++ b/src/single.html
@@ -1,4 +1,4 @@
-<div class="form-group" ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false}" ng-init="select_models=(form.schema.items | where : {value: $$value$$})">
+<!-- <div class="form-group" ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false}" ng-init="select_models=(form.schema.items | where : {value: $$value$$})">
   <label class="control-label" ng-show="showTitle()">{{form.title}}</label>
   <div class="form-group" ng-init="select_model.selected=select_models[0]">
     <ui-select ng-model="select_model.selected" ng-controller="UiSelectController"  ng-if="!(form.options.tagging||false)" theme="bootstrap" ng-disabled="form.disabled" on-select="$$value$$=$item.value" class="{{form.options.uiClass}}">
@@ -12,20 +12,20 @@
     </ui-select>
     <ui-select ng-controller="UiSelectController"  ng-model="select_model.selected" ng-if="(form.options.tagging||false) && !(form.options.groupBy || false)" tagging="form.options.tagging||false" tagging-label="form.options.taggingLabel" tagging-tokens="form.options.taggingTokens"
       theme="bootstrap" ng-disabled="form.disabled" on-select="$$value$$=$item.value" class="{{form.options.uiClass}}">
-      <ui-select-match placeholder="{{form.placeholder || form.schema.placeholder || ('placeholders.select' | translate)}}">{{select_model.selected.label}}&nbsp;<small>{{(select_model.selected.isTag===true ? form.options.taggingLabel : '')}}</small></ui-select-match>
+      <ui-select-match placeholder="{{form.placeholder || form.schema.placeholder || ('placeholders.select' | translate)}}">{{select_model.selected.label}}&nbsp;<small>{{(select_model.selected.isTag===true ? form.options.taggingLabel : '')}}</small></ui-select-match> -->
       <!--repeat code because tagging does not display properly under group by but is still useful -->
-      <ui-select-choices  refresh="form.options.refreshMethod(form.schema, $select.search)"
+<!--       <ui-select-choices  refresh="form.options.refreshMethod(form.schema, $select.search)"
              refresh-delay="form.options.refreshDelay" repeat="item in form.schema.items | propsFilter: {label: $select.search, description: (form.options.searchDescription===true ? $select.search : 'NOTSEARCHINGFORTHIS') }">
         <div ng-if="item.isTag" ng-bind-html="'<div>' + (item.label   | highlight: $select.search) + ' ' + form.options.taggingLabel + '</div><div class=&quot;divider&quot;></div>'"></div><div ng-if="!item.isTag" ng-bind-html="item.label + item.isTag| highlight: $select.search"></div>
       <div ng-if="item.description"> 
         <span  ng-bind-html="'<small>' + (''+item.description | highlight: (form.options.searchDescriptions===true ? $select.search : 'NOTSEARCHINGFORTHIS')) + '</small>'"></span>
       </div>
     </ui-select-choices>
-    </ui-select>
+    </ui-select> -->
 
       <!--repeat code because tagging does not display properly under group by but is still useful -->
 
-    <ui-select ng-controller="UiSelectController"  ng-model="select_model.selected" ng-if="(form.options.tagging||false) && (form.options.groupBy || false)"  tagging="form.options.tagging||false" tagging-label="form.options.taggingLabel" tagging-tokens="form.options.taggingTokens"
+<!--     <ui-select ng-controller="UiSelectController"  ng-model="select_model.selected" ng-if="(form.options.tagging||false) && (form.options.groupBy || false)"  tagging="form.options.tagging||false" tagging-label="form.options.taggingLabel" tagging-tokens="form.options.taggingTokens"
       theme="bootstrap" ng-disabled="form.disabled" on-select="$$value$$=$item.value" class="{{form.options.uiClass}}">
       <ui-select-match placeholder="{{form.placeholder || form.schema.placeholder || ('placeholders.select' | translate)}}">{{select_model.selected.label}}&nbsp;<small>{{(select_model.selected.isTag===true ? form.options.taggingLabel : '')}}</small></ui-select-match>
       <ui-select-choices group-by="form.options.groupBy" refresh="form.options.refreshMethod(form.schema, $select.search)"
@@ -44,4 +44,48 @@
       ng-show="(hasError() && errorMessage(schemaError())) || form.description"
       ng-bind-html="(hasError() && errorMessage(schemaError())) || form.description"></div>
   </div>
+</div> -->
+
+<div class="form-group {{form.htmlClass}}" ng-class="{'has-error': hasError()}">
+  <label class="control-label" ng-show="showTitle()">{{form.title}}</label>
+
+  <div ng-class="{'input-group': (form.fieldAddonLeft || form.fieldAddonRight)}">
+    <span ng-if="form.fieldAddonLeft"
+          class="input-group-addon"
+          ng-bind-html="form.fieldAddonLeft"></span>
+
+    <ui-select ng-model="$$value$$" 
+    					 ng-controller="UiSelectController"
+    					 theme="bootstrap"
+    					 ng-disabled="form.disabled"
+    					 on-select="$$value$$=$item" 
+    					 class="{{form.options.uiClass}}">
+
+      <ui-select-match placeholder="{{form.placeholder || form.schema.placeholder || ('placeholders.select' | translate)}}">
+      	{{$$value$$.label}}
+      </ui-select-match>
+
+      <ui-select-choices refresh="fetchResult(form.schema, form.options, $select.search)"
+             						 refresh-delay="form.options.refreshDelay" 
+             						 group-by="form.options.groupBy"  
+             						 repeat="item in form.schema.items">
+      <!--        						 repeat="item in form.schema.items | propsFilter: {label: $select.search, description: (form.options.searchDescriptions===true ? $select.search : 'NOTSEARCHINGFORTHIS') }"> -->
+      	
+      	<div ng-bind-html="item.label | highlight: $select.search"></div>
+
+	      <div ng-if="item.description"> 
+	        <span ng-bind-html="'<small>' + (''+item.description | highlight: (form.options.searchDescriptions===true ? $select.search : 'NOTSEARCHINGFORTHIS'))+ '</small>'"></span>
+	      </div>
+
+      </ui-select-choices>
+
+    </ui-select>
+
+    <span ng-if="form.fieldAddonRight"
+          class="input-group-addon"
+          ng-bind-html="form.fieldAddonRight">
+    </span>
+
+  </div>
+  <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || form.description}}</span>
 </div>
